# thepetheadquarters

./: .gitignore
server/: pyproject.toml
server/apps/accounts/: admin.py  authentication.py  models.py  permissions.py  serializers.py  services.py  throttling.py  tokens.py  urls.py  views.py
server/apps/accounts/migrations/: 0001_initial.py
server/apps/admin_panel/: pagination.py  urls.py
server/apps/admin_panel/serializers/: orders.py  (+2 more)
server/apps/analytics/: models.py  services.py  urls.py  views.py
server/apps/attributes/: models.py  serializers.py  urls.py  viewsets.py
server/apps/audit/: admin.py  apps.py  middleware.py  models.py  signals.py
server/apps/brands/: models.py  serializers.py  urls.py  viewsets.py
server/apps/categories/: models.py  serializers.py  urls.py  viewsets.py
server/apps/contact/: models.py  serializers.py  views.py
server/apps/core/: exceptions.py  middleware.py  models.py  pagination.py  responses.py  throttling.py  urls.py  views.py
server/apps/newsletter/: models.py  serializers.py  services.py  urls.py  views.py
server/apps/orders/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
server/apps/procurement/: admin.py  models.py  services.py
server/apps/products/: filters.py  models.py  ordering.py  serializers.py  urls.py  viewsets.py
server/apps/promotions/: models.py  services.py  urls.py  views.py
server/apps/reviews/: apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
server/apps/suppliers/: admin.py  models.py
server/config/: settings.py  urls.py
(+252 files in other folders)
